--- a/mi_tables.css
+++ b/mi_tables.css
@@ -6,15 +6,17 @@
    Case Problem 1
 
    Tables Style Sheet
-   Author: 
-   Date:   
+  Author: Jose Felix
+  Date:   12.10.18
 
    Filename:         mi_tables.css
 
 */
 
 /* Table Styles */
-
+table {
+    background: linear-gradient( rgb(190, 215, 255), black);
+}
 
 
 /* Column Styles */
