--- a/mi_tables.css
+++ b/mi_tables.css
@@ -14,24 +14,50 @@
 */
 
 /* Table Styles */
+/* Linear gradiants are separated by commas and they can be added onto by simply adding more commas that way. */
 table {
     background: linear-gradient( rgb(190, 215, 255), black);
+    border: 5px solid grey;
+}
+/* I can use commas here to select more than one thing to give a border to and that way I can assign the same style rules to multiple things using less code. */
+table th, table td {
+    border: 3px solid grey;
+    line-height: 1.4em;
+    padding: 8px;
+}
+
+table th {
+    background: black;
+    color:  rgb(130, 210, 255);
+    font-weight: normal;
+}
+table td {
+    color: white;
+    font-size: 0.9em;
+    text-align: top;
 }
 
 
+
 /* Column Styles */
-
-
+/* These are simple id's and classes. The first is an id and selects one element. The second is a class and marks more than one element or a group of the same element. */
+col#firstCol {
+    width: 24%;
+}
+col.dataCols {
+    width: 19%;
+}
 
 /* Table Header Styles */
-
-
-
-
-
-
-
-
-
-
-
+thead tr th {
+    height: 60px;
+}
+/* These were tricky to work with because I wanted to select the first of the tr and the first of the th as well, I had never done this before so it was cool to go through with it. */
+thead tr:first-of-type th:first-of-type {
+    font-size: 2em;
+}
+/* In the syntax I had to make it :not(whatever I want) and it could read that. It is pretty self-explanatory but it makes an exception for first of type so that it won't affect that code at all. */
+thead tr:first-of-type th:not(:first-of-type) {
+    background: transparent;
+    color: black;
+}
